# TreeWithMale

./: CMakeLists.txt  README.md
include/: AllPerson.hpp  FamilyTree.hpp
include/UI/: Controller.hpp  Menu.hpp  MenuItem.hpp  Terminal.hpp  UI.hpp
include/person/: BloodRelation.hpp  FemaleMember.hpp  Male.hpp  Parent.hpp  Person.hpp  PersonWithChild.hpp  Wife.hpp
include/utility/: PrintTree.hpp
src/: FamilyTree.cpp  main.cpp
src/UI/: Controller.cpp  Menu.cpp  MenuItem.cpp  Terminal.cpp  UI.cpp  test
src/person/: BloodRelation.cpp  FemaleMember.cpp  Male.cpp  Parent.cpp  Person.cpp  PersonWithChild.cpp  Wife.cpp
src/utility/: PrintTree.cpp
test/: TreeTest.cpp
test/person/: PersonTest.cpp  TestGetAncestor.cpp
test/utility/: PrintTreeTest.cpp
